src/components/ComboboxSelect/ComboboxSelect.module.css
.select-button {
  font-size: 1.4rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;
  border-radius: 10px;
  border: solid 1px #ccc;
  width: 100%;
  padding: 0.5rem;
  line-height: 2rem;
}

.select-button:focus {
  outline-offset: -2px;
  outline: #00f dashed 2px;
}

.combobox-input-wrapper {
  display: grid;
  grid-template-areas: "stack";
}

.combobox-input {
  width: 100%;
  font-size: 1.4rem;
  padding: 0.5rem;
  padding-left: 3rem;
  line-height: 2rem;
  border: none;
  border-bottom: solid 1px #ccc;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
}

.combobox-input,
.combobox-label {
  grid-area: stack;
}

.combobox-label {
  justify-self: start;
  align-content: center;
  justify-items: center;
  height: 3rem;
  width: 3rem;
}

.combobox-input:focus {
  outline-offset: -2px;
  outline: #00f dashed 2px;
  border-bottom: none;
}

.combobox-popover {
  text-align: left;
  border: solid 1px #ccc;
  border-radius: 10px;
  background: white;
  overflow: hidden;
  z-index: 1;
}

.combobox-list {
  max-height: clamp(3rem, var(--popover-available-height, 300px) - 3rem, 30rem);
  overflow: auto;
  overscroll-behavior: contain;
}

.combobox-item,
.options-info {
  background: white;
  cursor: default;
  padding: 0.5rem;
  font-size: 1.4rem;
  line-height: 2rem;
}

.combobox-item[data-active-item],
.combobox-item[data-focus-visible] {
  background: #333;
  color: #fefefe;
}

